# bettafish

./: .gitignore  PIPELINE.md  bettafish_colab.ipynb  catan-1v1-roadmap-v2.md  mcts_benchmark_results.txt  mcts_benchmark_tuning.txt  pyproject.toml  replay_game.py  replay_tui.py  specs.md  test.py  test_parser_against_log.py
bridge/: __init__.py  action_translator.py  bot_interface.py  card_tracker.py  config.py  coordinate_map.py  game_logger.py  protocol.py  server.py  state_translator.py
catanatron/catanatron/catanatron/: features.py  (+1 more)
datasets/: extract_gnn_features.py  format_adapter.py  game_parser.py  parse_games.py
docs/: exit_training_results.md  research_next_steps.md
robottler/: alphazero_net.py  az_selfplay.py  bb_mcts_player.py  benchmark.py  catan_env.py  extract_actions.py  fog_of_war.py  gnn_net.py  mcts_player.py  policy_value_net.py  rl_player.py  search_player.py  self_play.py  train_policy.py  train_rl.py  train_value.py  value_model.py  zobrist.py
robottler/bitboard/: __init__.py  _fast.pyx  actions.py  convert.py  features.py  masks.py  movegen.py  setup_cython.py  state.py
robottler/models/: az_iter0.pt  az_mini_iter1.pt  az_test_trained.pt  policy_net_v1.pt  value_net.pt  value_net_sp1.pt  value_net_v2.pt
scripts/: bench_bbsearch_vs_bbsearch.py  bench_depth1_leaf.py  eval_trades.py
tests/: __init__.py  test_action_translator.py  test_bitboard.py  test_config.py  test_coordinate_map.py  test_direct_vector.py  test_integration.py  test_protocol.py  test_state_translator.py  test_zobrist.py
userscript/: colonist_interceptor.user.js
(+6 files in other folders)
